fix(QES-FES Table): Attempts to fix word break on mobile

--- a/src/css/imports/table-dense.scss
+++ b/src/css/imports/table-dense.scss
@@ -79,6 +79,8 @@
 
       td {
         word-wrap: break-word;
+        word-break: break-all;
+        overflow-wrap: break-word;
         vertical-align: top;
         padding: 24px 10px 24px 0px;
         white-space: break-spaces;
